feat: Add VisualIcon Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "YDock"]
 	path = YDock
 	url = git@github.com:HeavyWork/YDock.git
+[submodule "VisualIcon"]
+	path = VisualIcon
+	url = git@github.com:HeavyWork/VisualIcon.git
