--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -1216,7 +1216,36 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MetroRadiance\source\MetroRadiance.Chrome.Externals\MetroRadiance.Chrome.Externals.csproj">
+      <Project>{35f4cdd9-e656-48c1-96f8-77cb63480e08}</Project>
+      <Name>MetroRadiance.Chrome.Externals</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MetroRadiance\source\MetroRadiance.Chrome\MetroRadiance.Chrome.csproj">
+      <Project>{21b4ad15-d9fa-4873-bfad-1eeefbc6c264}</Project>
+      <Name>MetroRadiance.Chrome</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MetroRadiance\source\MetroRadiance.Core\MetroRadiance.Core.csproj">
+      <Project>{a6b0a741-5be0-479d-b813-e65672350057}</Project>
+      <Name>MetroRadiance.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MetroRadiance\source\MetroRadiance\MetroRadiance.csproj">
+      <Project>{0af0b9ff-d981-4d0f-a41f-c3ab6fe2f16d}</Project>
+      <Name>MetroRadiance</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MetroRadiance\source\RetroRadiance\RetroRadiance.csproj">
+      <Project>{7f898b3a-da17-4cab-b387-5629b5faca49}</Project>
+      <Name>RetroRadiance</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VisualIcon\VisualIcon\VisualIcon.csproj">
+      <Project>{04dbbef4-f422-4973-8eaa-11c15e09b7de}</Project>
+      <Name>VisualIcon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\YDock\YDock\YDock.csproj">
+      <Project>{2bd226e4-b931-4b46-a6c3-d15270ad0565}</Project>
+      <Name>YDock</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Views\TextEditorView.xaml">
       <SubType>Designer</SubType>
