feat: Add Generic Styles

--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -1250,6 +1250,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Styles\Generic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\TextEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -1263,5 +1267,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
