--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -1270,4 +1270,15 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
+    <Message Text="Starting AfterBuild..." />
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="myAssemblyInfo"/>
+    </GetAssemblyIdentity>
+    <Message Text="Starting nuget pack..." />
+    <Exec Command="nuget pack $(MSBuildProjectDirectory)\..\nuget\Ruminoid.Trimmer.nuspec -Version %(myAssemblyInfo.Version) -Properties Configuration=Release -OutputDirectory $(MSBuildProjectDirectory)\..\nuget\ -BasePath $(MSBuildProjectDirectory)\..\nuget\" />
+    <Message Text="Starting Squirrel pack..." />
+    <Exec Command="Squirrel --releasify $(MSBuildProjectDirectory)\..\nuget\Ruminoid.Trimmer.$([System.Version]::Parse(%(myAssemblyInfo.Version)).ToString(3)).nupkg -g $(MSBuildProjectDirectory)\..\Assets\logo_v1.gif -r $(MSBuildProjectDirectory)\..\Releases\" />
+    <Message Text="AfterBuild complete." />
+  </Target>
 </Project>
