--- a/Ruminoid.Trimmer.Shell/packages.config
+++ b/Ruminoid.Trimmer.Shell/packages.config
@@ -3,6 +3,7 @@
   <package id="AvalonEdit" version="6.0.1" targetFramework="net48" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net48" />
+  <package id="NuGet.CommandLine" version="5.4.0" targetFramework="net48" developmentDependency="true" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net48" />
   <package id="Splat" version="1.6.2" targetFramework="net48" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net48" />
