--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Commands\HelpCommands.cs" />
     <Compile Include="Commands\MainCommands.cs" />
     <Compile Include="Helpers\ConfigHelper.cs" />
+    <Compile Include="Models\LrcModel.cs" />
     <Compile Include="Views\TextEditorView.xaml.cs">
       <DependentUpon>TextEditorView.xaml</DependentUpon>
     </Compile>
