--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\squirrel.windows.1.9.1\build\squirrel.windows.props" Condition="Exists('..\packages\squirrel.windows.1.9.1\build\squirrel.windows.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -113,6 +113,9 @@
     <Compile Include="Models\LrcModel.cs" />
     <Compile Include="Views\LyricEditorView.xaml.cs">
       <DependentUpon>LyricEditorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PlaybackView.xaml.cs">
+      <DependentUpon>PlaybackView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TextEditorView.xaml.cs">
       <DependentUpon>TextEditorView.xaml</DependentUpon>
@@ -1307,6 +1310,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\LyricEditorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PlaybackView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
