--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Commands\ViewCommands.cs" />
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Models\LrcModel.cs" />
+    <Compile Include="Models\PlaybackPosition.cs" />
     <Compile Include="Views\LyricEditorView.xaml.cs">
       <DependentUpon>LyricEditorView.xaml</DependentUpon>
     </Compile>
