--- a/Ruminoid.Trimmer.Shell/packages.config
+++ b/Ruminoid.Trimmer.Shell/packages.config
@@ -11,4 +11,6 @@
   <package id="Splat" version="1.6.2" targetFramework="net48" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net48" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net48" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
 </packages>
