--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Views\PlaybackViewCommandBinding.cs">
       <DependentUpon>PlaybackView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\PlaybackViewDataContext.cs">
+      <DependentUpon>PlaybackView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TextEditorView.xaml.cs">
       <DependentUpon>TextEditorView.xaml</DependentUpon>
     </Compile>
