feat: Add LyricEditorView Partial Class

--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -128,6 +128,12 @@
     <Compile Include="Views\LyricEditorView.xaml.cs">
       <DependentUpon>LyricEditorView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\LyricEditorViewCommandBinding.cs">
+      <DependentUpon>LyricEditorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LyricEditorViewDataContext.cs">
+      <DependentUpon>LyricEditorView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PlaybackView.xaml.cs">
       <DependentUpon>PlaybackView.xaml</DependentUpon>
     </Compile>
