feat: SkipData Update

--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -245,9 +245,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\SkipData.txt">
+    <None Include="Resources\SkipData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
