feat: Add ModeType

--- a/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
+++ b/Ruminoid.Trimmer.Shell/Ruminoid.Trimmer.Shell.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Models\Export.cs" />
     <Compile Include="Models\LrcModel.cs" />
+    <Compile Include="Models\ModeType.cs" />
     <Compile Include="Models\Modify.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Views\LyricEditorView.xaml.cs">
